fixtures/scan/k8s-multifile/k8s/service-billing.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-api
spec:
  selector:
    app: billing-api
  ports:
    - port: 80
